@@ -2,6 +2,9 @@ Changelog for Writer2LaTeX version 1.0 -> 1.2
 
 ---------- version 1.1.9 ----------
 
+[w2x] EPUB change: Missing heading levels are now treated more consistent in the toc. E.g. the sequence of heading levels
+  2-2-1-3-3-2 is now exported as toc levels 1-1-1-2-2-2 (before it was 1-2-1-2-3-2)
+
 [w2l] Bugfix: Ignore headings inside footnotes (export as normal paragraph). Footnotes should not contain headings, and this
   change avoids an infinite loop if such a footnote is within a table.
 
